5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4194/executions/1644_1055.log
== TEST (2019-04-15 22:58:27) 
-- CODE:
from math import *
vo = float(input("Velocidade inicial"))
a = radians(float(input("Angulo")))
D = ads(float(input("Distancia")))
g = 9.8
R = ((vo)**2*sin(2*a)/g)
if(D - R < 0.1):
	print("sim")
else:
	print("nao")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    D = ads(float(input()))
NameError: name 'ads' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:58:48) 
-- CODE:
from math import *
vo = float(input("Velocidade inicial"))
a = radians(float(input("Angulo")))
D = abs(float(input("Distancia")))
g = 9.8
R = ((vo)**2*sin(2*a)/g)
if(D - R < 0.1):
	print("sim")
else:
	print("nao")
-- OUTPUT:
sim
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 22:59:01) 
-- CODE:
from math import *
vo = float(input("Velocidade inicial"))
a = radians(float(input("Angulo")))
D = abs(float(input("Distancia")))
g = 9.8
R = ((vo)**2*sin(2*a)/g)
if(D - R < 0.1):
	print("sim")
else:
	print("nao")
-- EXECUTION TIME:
0.183839
-- TEST CASE 1:
---- input:
10.5
45.5
11.3
---- correct output:
sim
---- user output:
sim
-- TEST CASE 2:
---- input:
29.5
17.1
51.0
---- correct output:
nao
---- user output:
nao
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
